# ads-bib

./: .env.example  .gitattributes  .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  Code_Review_ToDo.md  HF_API_Test.ipynb  LICENSE  Package_ToDo.md  Qwen3.5-0.8_Test.ipynb  README.md  Review_ToDo.md  Test.ipynb  bertopic_llamacpp_qwen25_mwe.ipynb  pipeline.ipynb  pipeline_gemma.ipynb  pyproject.toml  test_qwen_Embeddings.ipynb  zensical.toml
.claude/: settings.local.json
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.github/workflows/: ci.yml  docs.yml  release.yml
archive/: 02_topic_modeling.ipynb  03_visualization.ipynb  ADS_create_edgelists.ipynb  ADS_dataset_statistics.ipynb  ADS_export_search.ipynb  ADS_search.ipynb  ADS_translate.ipynb  Review_ToDo_2026-02-25_closed.md  citation_utils.py
configs/pipeline/: default.yaml  hf_api.yaml  huggingface_api.yaml  local.yaml  local_cpu.yaml  local_gpu.yaml  openrouter.yaml  treder_notebook.yaml  treder_notebook_hf.yaml  treder_notebook_local.yaml
constraints/: local-hf.txt
data/: README.md
docs/: advanced-integrations.md  choose-your-path.md  citation-networks.md  configuration.md  get-started.md  index.md  manual_provider_parity.md  outputs.md  pipeline-guide.md  python-api.md  reference.md  runtime-guide.md  runtime-roads.md  search-query-design.md  topic-modeling.md  troubleshooting.md
docs/assets/: author_co_citation_filtered.json  topic_map.html
docs/developer-notes/: index.md  manual_provider_parity.md  release.md
docs/stylesheets/: github-theme.css
env_migration_logs/: ADS_env.from-history.yml  ADS_env.full.yml  ADS_env.pip-freeze.txt
notebooks/: pipeline_gemma_experiment.ipynb
runs/: README.md
scripts/: benchmark_cache_behavior.py  benchmark_pipeline_baseline.py  benchmark_translation_gguf.py  build_inspire_source_input.py  build_semantic_scholar_source_input.py  mwe_translategemma_parallel.py
scripts/ops/: check_release_docs.py  check_release_version.py
src/ads_bib/: __init__.py  _config_overrides.py  _dataset_bundle.py  _stage_state.py  author_disambiguation.py  bootstrap.py  citations.py  cli.py  config.py  curate.py  doctor.py  export.py  notebook.py  pipeline.py  presets.py  prompts.py  run_manager.py  run_stage_artifacts.py  run_variants.py  runner.py  search.py  source_input.py  tokenize.py  topic_model.py  translate.py  visualize.py
src/ads_bib/_presets/: hf_api.yaml  local_cpu.yaml  local_gpu.yaml  openrouter.yaml
src/ads_bib/_utils/: ads_api.py  authors.py  checkpoints.py  cleaning.py  costs.py  gguf_backend.py  hf_compat.py  huggingface_api.py  io.py  llama_server.py  local_models.py  local_runtime.py  logging.py  model_specs.py  openrouter_client.py  openrouter_costs.py
src/ads_bib/topic_model/: __init__.py  _runtime.py  backends.py  embeddings.py  input.py  output.py  reduction.py
tests/: conftest.py  provider_profiles.py  test_author_disambiguation.py  test_bertopic_llamacpp_qwen25_mwe_notebook.py  test_bootstrap_doctor.py  test_checkpoints.py  test_citations_additional.py  test_citations_author_list.py  test_cleaning_utils.py  test_cli.py  test_config.py  test_cost_tracker.py  test_curate.py  test_dataset_bundle_export.py  test_export_author_list.py  test_huggingface_api_utils.py  test_huggingface_live.py  test_inspire_source_input_builder.py  test_internal_module_wiring.py  test_io_utils.py  test_llama_server_runtime.py  test_logging_contract.py  test_notebook_session.py  test_openrouter_client.py  test_openrouter_costs.py  test_package_exports.py  test_pipeline_notebook_contract.py  test_pipeline_runner.py  test_pipeline_smoke_e2e.py  test_preset_drift.py  test_repository_hygiene.py  test_run_manager.py  test_run_variants.py  test_runner.py  test_runtime_logging.py  test_search.py  test_semantic_scholar_source_input_builder.py  test_source_input.py  test_tokenize.py  test_topic_model.py  (+6 more)
