[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ads-bib"
version = "0.1.0"
description = "NASA ADS bibliometric analysis pipeline for citation networks, topic modeling, and dataset curation."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Raphael Schlattmann" },
]
maintainers = [
    { name = "Raphael Schlattmann" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "PyYAML",
    "networkx",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow",
    "requests",
    "python-dotenv",
    "fasttext-wheel",
    "spacy>=3.7",
    "tqdm",
    "scipy>=1.10",
]
keywords = ["ads", "bibliometrics", "research", "topic-modeling", "citation-network"]

[project.urls]
Homepage = "https://github.com/raphschlatt/ADS_Pipeline"
Documentation = "https://raphschlatt.github.io/ADS_Pipeline/"
Repository = "https://github.com/raphschlatt/ADS_Pipeline"
Issues = "https://github.com/raphschlatt/ADS_Pipeline/issues"

[project.scripts]
ads-bib = "ads_bib.cli:main"

[project.optional-dependencies]
topic = [
    "bertopic",
    "sentence-transformers>=5.1",
    "scikit-learn",
    "datamapplot>=0.6.4,<0.7",
    "pacmap",
    "fast-hdbscan",
    "huggingface-hub",
    "openai",
    "toponymy==0.4.0",
    "dask",
    "seaborn",
    "matplotlib",
]
topic-llm = ["litellm"]
umap = ["umap-learn"]
hdbscan = ["hdbscan"]
translate-nllb = ["ctranslate2", "transformers>=4.56", "sentencepiece", "huggingface-hub"]
test = ["pytest>=7", "ruff>=0.6", "openai", "huggingface-hub"]
all = ["ads-bib[topic,topic-llm,translate-nllb,umap,hdbscan]"]

[tool.hatch.build.targets.wheel]
packages = ["src/ads_bib"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.claude",
    "/.github",
    "/_test_run_dir",
    "/AGENTS.md",
    "/configs",
    "/data",
    "/docs",
    "/pipeline.ipynb",
    "/runs",
    "/scripts",
    "/site",
    "/tests",
]

[tool.pytest.ini_options]
markers = [
    "slow: slower integration or dependency-heavy tests",
    "requires_topic_stack: needs topic/umap/hdbscan/datamapplot extras (CI heavy job)",
]
addopts = "--strict-markers"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
ignore = ["F821"]
