[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ads-bib"
version = "0.1.0"
description = "Pipeline for querying and turning NASA's ADS publications metadata into curated, analysis-ready datasets, topic maps, and citation networks."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Raphael Schlattmann" },
]
maintainers = [
    { name = "Raphael Schlattmann" },
]
requires-python = ">=3.12,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "ads-and[cpu_onnx,modal]>=0.1.3,<0.2",
    "PyYAML",
    "accelerate>=1.0",
    "bertopic",
    "ctranslate2",
    "datamapplot>=0.6.4,<0.7",
    "dask",
    "fast-hdbscan>=0.2.2,<0.3",
    "fasttext-wheel",
    "huggingface-hub",
    "litellm",
    "matplotlib",
    "networkx",
    "openai",
    "numpy>=1.24",
    "pacmap",
    "pandas>=2.0",
    "pyarrow",
    "requests",
    "python-dotenv",
    "scikit-learn",
    "seaborn",
    "sentence-transformers>=5.1",
    "sentencepiece",
    "spacy>=3.7",
    "scipy>=1.10",
    "toponymy==0.4.0",
    "torch>=2.6,<2.7",
    "tqdm",
    "transformers>=4.56,<4.57",
]
keywords = [
    "topic-modeling",
    "digital-humanities",
    "bibliometrics",
    "publication-metadata",
    "dataset-curation",
    "citation-networks",
]

[project.urls]
Homepage = "https://github.com/raphschlatt/ads-bib"
Documentation = "https://raphschlatt.github.io/ads-bib/"
Repository = "https://github.com/raphschlatt/ads-bib"
Issues = "https://github.com/raphschlatt/ads-bib/issues"

[project.scripts]
ads-bib = "ads_bib.cli:main"

[project.optional-dependencies]
umap = ["umap-learn"]
hdbscan = ["hdbscan"]
test = ["pytest>=7", "ruff>=0.6"]

[dependency-groups]
dev = [
    "ipykernel>=6",
    "pytest>=7",
    "ruff>=0.6",
    "zensical",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ads_bib"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.claude",
    "/.github",
    "/.venv",
    "/.venv.*",
    "/_test_run_dir",
    "/AGENTS.md",
    "/Package_ToDo.md",
    "/configs",
    "/data",
    "/docs",
    "/pipeline.ipynb",
    "/runs",
    "/scripts",
    "/site",
    "/tests",
]

[tool.pytest.ini_options]
markers = [
    "slow: slower integration or dependency-heavy tests",
    "requires_topic_stack: needs topic/umap/hdbscan/datamapplot extras (CI heavy job)",
]
addopts = "--strict-markers"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
ignore = ["F821"]
